--- a/settings.ini
+++ b/settings.ini
@@ -13,7 +13,7 @@ author = Aditya Oke
 author_email = okeaditya315@gmail.com
 copyright = Aditya Oke
 branch = master
-version = 0.1.0
+version = 0.1.0rc1
 min_python = 3.6
 audience = Developers
 language = English
